--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,26 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <style>
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+table {
+  align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+th, td {
+  background-color: azure;
+}
+
+h1 {
+  text-align: center;
+}
+    </style>
   </head>
 
   <body>
