--- a/app/views/markets/index.html.erb
+++ b/app/views/markets/index.html.erb
@@ -1,9 +1,22 @@
 <h1>Markets</h1>
 
 <section class="markets">
-  <% @facade.markets.each do |market| %>
-    <div id="market">
-      <li><%= market.name %> - <%= market.city %>, <%= market.state %> <%= button_to "More Info", "/markets/#{market.id}", method: :get %></li>
-    </div>
-  <% end %>
+  <table style="width:80%">
+    <tr>
+      <th>Name</th>
+      <th>City</th>
+      <th>State</th>
+      <th></th>
+    </tr>
+    <% @facade.markets.each do |market| %>
+      <tr>
+        <div id="market">
+          <td><%= market.name %></td> 
+          <td><%= market.city %></td>
+          <td><%= market.state %></td>
+          <td><%= button_to "More Info", "/markets/#{market.id}", method: :get %></td>
+        </div>
+      </tr>
+    <% end %>
+  </table>
 </section>
